# anicli-es

./: Cargo.toml  README.md
src/: main.rs  mainfunctions.rs  structs.rs
src/mainfunctions/: auxfunctions.rs
src/structs/: anime.rs
